--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,24 +1,27 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/ruby
 {
-  "name": "Elixir",
-  "build":{
-    "dockerfile": "Dockerfile",
-    "context": ".."
-  },
+	"name": "Ruby",
+	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"image": "mcr.microsoft.com/devcontainers/ruby:1-3.3-bullseye",
+	"features": {
+		"ghcr.io/devcontainers-contrib/features/ruby-asdf:0": {},
+		"ghcr.io/devcontainers-contrib/features/erlang-asdf:2": {},
+		"ghcr.io/devcontainers-contrib/features/elixir-asdf:2": {}
+	},
 
-  "settings": {
-    "terminal.integrated.defaultProfile.linux": "bash"
-  },
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	// "features": {},
 
-  "appPort": [],
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
 
-  "postCreateCommand": "",
+	// Use 'postCreateCommand' to run commands after the container is created.
+	"postCreateCommand": "gem install minitest"
 
-  "remoteUser": "vscode",
+	// Configure tool-specific properties.
+	// "customizations": {},
 
-  "extensions": [
-    "editorconfig.editorconfig",
-    "github.vscode-pull-request-github",
-    "jakebecker.elixir-ls",
-    "redhat.vscode-yaml"
-  ]
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
